List results of full postcode search

--- a/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
@@ -152,6 +152,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Address\AddressLookupProviderTests.cs" />
     <Compile Include="AzureServiceBus\Configuration\AzureServiceBusConfigurationTests.cs" />
     <Compile Include="Caching\MemoryCachingTests.cs" />
     <Compile Include="Communication\SendGridEmailDispatcherTests.cs" />
