--- a/src/SFA.WebProxy/SFA.WebProxy.csproj
+++ b/src/SFA.WebProxy/SFA.WebProxy.csproj
@@ -115,6 +115,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logging\NullProxyLogging.cs" />
     <Compile Include="Repositories\CachedWebProxyUserRepository.cs" />
     <Compile Include="Service\ICacheService.cs" />
     <Compile Include="Configuration\CachedConfiguration.cs" />
