--- a/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
+++ b/src/SFA.Apprenticeships.Web.Candidate/Web.Sit.config
@@ -20,6 +20,9 @@
   </system.web>
 
   <system.webServer>
+    <security xdt:Transform="Replace">
+      <ipSecurity allowUnlisted="true"/>
+    </security>
     <rewrite xdt:Transform="Insert">
       <rules>        
         <rule name="RedirectToSiteMap" stopProcessing="true">
