Corrected application counts and link back to applications from preview

--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -486,6 +486,7 @@
     <Content Include="Views\Vacancy\_CommentIcon.cshtml" />
     <Content Include="Views\Vacancy\_EditLink.cshtml" />
     <Content Include="Views\Vacancy\_ValidationResultIcons.cshtml" />
+    <Content Include="Views\Vacancy\_ApplicationsLink.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
