--- a/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
@@ -82,7 +82,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Applications\ErrorCodes.cs" />
-    <Compile Include="Applications\IApplicationService.cs" />
+    <Compile Include="Applications\IApprenticeshipApplicationService.cs" />
     <Compile Include="Candidates\ErrorCodes.cs" />
     <Compile Include="Communications\CommunicationChannels.cs" />
     <Compile Include="Communications\CommunicationRequestHelpers.cs" />
