--- a/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
+++ b/src/SFA.Apprenticeships.Application.Interfaces/SFA.Apprenticeships.Application.Interfaces.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Employers\IEmployerService.cs" />
     <Compile Include="Generic\Pageable.cs" />
     <Compile Include="Locations\ErrorCodes.cs" />
+    <Compile Include="Locations\IAddressSearchService.cs" />
     <Compile Include="Logging\ILogService.cs" />
     <Compile Include="Messaging\BaseRequest.cs" />
     <Compile Include="Communications\CommunicationToken.cs" />
