US872: add vacancy upload validators and tests.

--- a/src/SFA.Apprenticeship.Api.AvService/packages.config
+++ b/src/SFA.Apprenticeship.Api.AvService/packages.config
@@ -5,6 +5,7 @@
   <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.ExceptionHandling" version="5.0.505.0" targetFramework="net451" />
   <package id="EnterpriseLibrary.ExceptionHandling.WCF" version="5.0.505.0" targetFramework="net451" />
+  <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
