--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/packages.config
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.34.0" targetFramework="net452" />
   <package id="FluentAssertions" version="3.5.0" targetFramework="net452" />
+  <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
   <package id="Moq" version="4.2.1507.0118" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
 </packages>
