--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -487,6 +487,7 @@
     <Content Include="Views\Vacancy\_EditLink.cshtml" />
     <Content Include="Views\Vacancy\_ValidationResultIcons.cshtml" />
     <Content Include="Views\Vacancy\_ApplicationsLink.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\VacancyLocationAddressViewModel.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
