--- a/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit.UnitTests/SFA.Apprenticeships.Web.Recruit.UnitTests.csproj
@@ -156,6 +156,8 @@
   <ItemGroup>
     <Compile Include="Builders\VacancyViewModelBuilder.cs" />
     <Compile Include="Mappers\RecruitMappersTests.cs" />
+    <Compile Include="Mediators\Locations\LocationsTests.cs" />
+    <Compile Include="Mediators\Locations\TestsBase.cs" />
     <Compile Include="Mediators\ProviderUser\AuthorizeTests.cs" />
     <Compile Include="Mediators\ProviderUser\TestBase.cs" />
     <Compile Include="Mediators\ProviderUser\VerifyEmailAddressTests.cs" />
@@ -164,6 +166,8 @@
     <Compile Include="Mediators\VacancyPosting\PreviewVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\CloneVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\SubmitVacancyTests.cs" />
+    <Compile Include="Providers\LocationsProvider\LocationsTests.cs" />
+    <Compile Include="Providers\LocationsProvider\TestBase.cs" />
     <Compile Include="Providers\VacancyPosting\CloneVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\CreateVacancyTests.cs" />
     <Compile Include="Mediators\VacancyPosting\IndexTests.cs" />
