Configurable topic name formatter allowing for multi developer usage of the same service bus instance

--- a/src/SFA.Apprenticeships.Infrastructure.Azure.ServiceBus/SFA.Apprenticeships.Infrastructure.Azure.ServiceBus.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Azure.ServiceBus/SFA.Apprenticeships.Infrastructure.Azure.ServiceBus.csproj
@@ -108,11 +108,14 @@
     <Compile Include="Configuration\AzureServiceBusSubscriptionConfiguration.cs" />
     <Compile Include="Configuration\AzureServiceBusTopicConfiguration.cs" />
     <Compile Include="AzureServiceBus.cs" />
+    <Compile Include="DefaultTopicNameFormatter.cs" />
     <Compile Include="Factory\ClientFactory.cs" />
     <Compile Include="Factory\IClientFactory.cs" />
     <Compile Include="IoC\AzureServiceBusRegistry.cs" />
     <Compile Include="IServiceBusInitialiser.cs" />
     <Compile Include="IServiceBusMessageBroker.cs" />
+    <Compile Include="ITopicNameFormatter.cs" />
+    <Compile Include="MachineNameTopicNameFormatter.cs" />
     <Compile Include="Model\BrokeredMessageWrapper.cs" />
     <Compile Include="Model\IBrokeredMessage.cs" />
     <Compile Include="Model\ISubscriptionClient.cs" />
