--- a/src/SFA.Apprenticeships.Infrastructure.LogEventIndexer/App.Demo.config
+++ b/src/SFA.Apprenticeships.Infrastructure.LogEventIndexer/App.Demo.config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
   <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <variable name="environment" value="PRE" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
+    <variable name="environment" value="DEMO" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
     <targets async="true" xdt:Transform="Replace">
       <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
-        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.ScheduledJobs.{0}" AppId="SFA.Apprenticeships.Infrastructure.ScheduledJobs">
+        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.LogEventIndexer.{0}" AppId="SFA.Apprenticeships.Infrastructure.LogEventIndexer">
           <layout xsi:type="JsonLayout">
-            <property name="application" layout="SFA.Apprenticeships.Infrastructure.ScheduledJobs" />
+            <property name="application" layout="SFA.Apprenticeships.Infrastructure.LogEventIndexer" />
             <property name="environment" layout="${environment}" />
             <property name="version" layout="${gdc:item=version}" />
             <property name="date" layout="${longdate}" />
