--- a/src/SFA.Apprenticeships.Infrastructure.LogEventIndexer/App.Pre.config
+++ b/src/SFA.Apprenticeships.Infrastructure.LogEventIndexer/App.Pre.config
@@ -4,9 +4,9 @@
     <variable name="environment" value="PRE" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
     <targets async="true" xdt:Transform="Replace">
       <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
-        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.ScheduledJobs.{0}" AppId="SFA.Apprenticeships.Infrastructure.ScheduledJobs">
+        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.LogEventIndexer.{0}" AppId="SFA.Apprenticeships.Infrastructure.LogEventIndexer">
           <layout xsi:type="JsonLayout">
-            <property name="application" layout="SFA.Apprenticeships.Infrastructure.ScheduledJobs" />
+            <property name="application" layout="SFA.Apprenticeships.Infrastructure.LogEventIndexer" />
             <property name="environment" layout="${environment}" />
             <property name="version" layout="${gdc:item=version}" />
             <property name="date" layout="${longdate}" />
