--- a/src/SFA.Apprenticeships.Infrastructure.Monitor/App.Demo.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Monitor/App.Demo.config
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns:nlog="http://www.nlog-project.org/schemas/NLog.xsd">
-  <nlog:nlog>
-    <nlog:variable name="environment" value="DEMO" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
-  </nlog:nlog>
+  <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <variable name="environment" value="DEMO" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
+    <targets async="true" xdt:Transform="Replace">
+      <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
+        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.Monitor.{0}" AppId="SFA.Apprenticeships.Infrastructure.Monitor">
+          <layout xsi:type="JsonLayout">
+            <property name="application" layout="SFA.Apprenticeships.Infrastructure.Monitor" />
+            <property name="environment" layout="${environment}" />
+            <property name="version" layout="${gdc:item=version}" />
+            <property name="date" layout="${longdate}" />
+            <property name="level" layout="${level:upperCase=true}" />
+            <property name="logger" layout="${logger}" />
+            <property name="machinename" layout="${machinename}" />
+            <property name="processname" layout="${processname}" />
+            <property name="message" layout="${message}" />
+            <property name="exception" layout="${onexception:${exception:format=tostring}}" />
+            <property name="errordata" layout="${onexception:${exception:format=data}}" />
+            <property name="errorcode" layout="${event-context:item=ErrorCode}" />
+            <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
+            <property name="ticks" layout="${ticks}" />
+            <property name="processid" layout="${processid}" />
+          </layout>
+        </target>
+      </target>
+    </targets>
+    <rules xdt:Transform="Replace">
+      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
+    </rules>
+  </nlog>
 </configuration>
