--- a/src/SFA.Apprenticeships.Infrastructure.ScheduledJobs/App.config
+++ b/src/SFA.Apprenticeships.Infrastructure.ScheduledJobs/App.config
@@ -77,30 +77,28 @@
     </extensions>
     <variable name="environment" value="Local" />
     <targets async="true">
-      <target xsi:type="FallbackGroup" name="fallbacklogger" returnToFirstOnSuccess="true">
-        <target name="rabbit" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Infrastructure.ScheduledJobs.{0}" AppId="SFA.Apprenticeships.Infrastructure.ScheduledJobs">
-          <layout xsi:type="JsonLayout">
-            <property name="application" layout="SFA.Apprenticeships.Infrastructure.ScheduledJobs" />
-            <property name="environment" layout="${environment}" />
-            <property name="version" layout="${gdc:item=version}" />
-            <property name="date" layout="${longdate}" />
-            <property name="level" layout="${level:upperCase=true}" />
-            <property name="logger" layout="${logger}" />
-            <property name="machinename" layout="${machinename}" />
-            <property name="processname" layout="${processname}" />
-            <property name="message" layout="${message}" />
-            <property name="exception" layout="${onexception:${exception:format=tostring}}" />
-            <property name="errordata" layout="${onexception:${exception:format=data}}" />
-            <property name="errorcode" layout="${event-context:item=ErrorCode}" />
-            <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
-            <property name="ticks" layout="${ticks}" />
-            <property name="processid" layout="${processid}" />
-          </layout>
-        </target>
+      <target xsi:type="File" name="flatfilelogger" fileName="C:\logs\Worker.ScheduledJobs.log" createDirs="true" keepFileOpen="false" encoding="iso-8859-2">
+        <layout xsi:type="JsonLayout">
+          <property name="application" layout="SFA.Apprenticeships.Infrastructure.ScheduledJobs" />
+          <property name="environment" layout="${environment}" />
+          <property name="version" layout="${gdc:item=version}" />
+          <property name="date" layout="${longdate}" />
+          <property name="level" layout="${level:upperCase=true}" />
+          <property name="logger" layout="${logger}" />
+          <property name="machinename" layout="${machinename}" />
+          <property name="processname" layout="${processname}" />
+          <property name="message" layout="${message}" />
+          <property name="exception" layout="${onexception:${exception:format=tostring}}" />
+          <property name="errordata" layout="${onexception:${exception:format=data}}" />
+          <property name="errorcode" layout="${event-context:item=ErrorCode}" />
+          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
+          <property name="ticks" layout="${ticks}" />
+          <property name="processid" layout="${processid}" />
+        </layout>
       </target>
     </targets>
     <rules>
-      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
+      <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
     </rules>
   </nlog>
 </configuration>
