--- a/src/SFA.Apprenticeships.Application.Vacancies/SFA.Apprenticeships.Application.Vacancies.csproj
+++ b/src/SFA.Apprenticeships.Application.Vacancies/SFA.Apprenticeships.Application.Vacancies.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Entities\SiteMap\CreateVacancySiteMapRequest.cs" />
     <Compile Include="Entities\TraineeshipSummaryUpdate.cs" />
     <Compile Include="Entities\VacancyAboutToExpire.cs" />
+    <Compile Include="Entities\VacancyEligibleForClosure.cs" />
     <Compile Include="Entities\VacancySummaries.cs" />
     <Compile Include="Entities\VacancySummaryPage.cs" />
     <Compile Include="Entities\VacancySummaryPageComplete.cs" />
@@ -98,8 +99,10 @@
     <Compile Include="ISavedSearchProcessor.cs" />
     <Compile Include="ISiteMapVacancyProcessor.cs" />
     <Compile Include="ITraineeshipsSummaryUpdateProcessor.cs" />
+    <Compile Include="IVacancyStatusProcessor.cs" />
     <Compile Include="SavedSearchProcessor.cs" />
     <Compile Include="SiteMapVacancyProcessor.cs" />
+    <Compile Include="VacancyStatusProcessor.cs" />
     <Compile Include="VacancySummaryProcessor.cs" />
     <Compile Include="IVacancyIndexDataProvider.cs" />
     <Compile Include="IVacancySummaryProcessor.cs" />
