--- a/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Repositories\Communication\ExpiringApprenticeshipApplicationDraftsRepositoryTests.cs" />
     <Compile Include="Repositories\RepositoryIntegrationTest.cs" />
     <Compile Include="Repositories\Users\UserRepositoryTests.cs" />
+    <Compile Include="Repositories\Vacancies\ApprenticeshipVacancyRepositoryTests.cs" />
     <Compile Include="Repositories\Vacancies\ApprenticeshipVacancyWriteRepositoryTests.cs" />
     <Compile Include="TacticalDataServices\TacticalDataServicesTest.cs" />
     <Compile Include="UserDirectory\UserDirectoryProviderTests.cs" />
