--- a/src/SFA.Apprenticeship.Api.AvService/Web.config
+++ b/src/SFA.Apprenticeship.Api.AvService/Web.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <section name="exceptionHandling" type="Microsoft.Practices.EnterpriseLibrary.ExceptionHandling.Configuration.ExceptionHandlingSettings, Microsoft.Practices.EnterpriseLibrary.ExceptionHandling, Version=5.0.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
 
   <system.diagnostics>
@@ -93,6 +94,42 @@
         <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <nlog throwExceptions="true" autoReload="true" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <extensions>
+      <add assembly="SFA.Apprenticeships.Infrastructure.Logging" />
+    </extensions>
+    <variable name="environment" value="Local" />
+    <targets async="true">
+      <target xsi:type="File" name="flatfilelogger" fileName="C:\logs\Api.AvService.log" createDirs="true" keepFileOpen="false" encoding="iso-8859-2">
+        <layout xsi:type="JsonLayout">
+          <property name="user" layout="${mdlc:userId}" />
+          <property name="session" layout="${mdlc:sessionId}" />
+          <property name="date" layout="${longdate}" />
+          <property name="level" layout="${level:upperCase=true}" />
+          <property name="logger" layout="${logger}" />
+          <property name="message" layout="${message}" />
+          <property name="exception" layout="${onexception:${exception:format=tostring}}" />
+          <property name="errordata" layout="${onexception:${exception:format=data}}" />
+          <property name="errorcode" layout="${event-context:item=ErrorCode}" />
+          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
+          <property name="ticks" layout="${ticks}" />
+          <property name="processid" layout="${processid}" />
+          <property name="useragent" layout="${mdlc:UserAgent}" />
+          <property name="referrer" layout="${mdlc:UrlReferrer}" />
+          <property name="userlanguages" layout="${mdlc:UserLanguages}" />
+          <property name="headers" layout="${mdlc:Headers}" />
+        </layout>
+      </target>
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="flatfilelogger" />
+    </rules>
+  </nlog>
 </configuration>
