--- a/src/SFA.Apprenticeship.Api.AvService/Web.Dev.config
+++ b/src/SFA.Apprenticeship.Api.AvService/Web.Dev.config
@@ -1,31 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
-
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
-  <system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <!--
-      In the example below, the "Replace" transform will replace the entire 
-      <customErrors> section of your web.config file.
-      Note that because there is only one customErrors section under the 
-      <system.web> node, there is no need to use the "xdt:Locator" attribute.
-      
-      <customErrors defaultRedirect="GenericError.htm"
-        mode="RemoteOnly" xdt:Transform="Replace">
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
-    -->
-  </system.web>
+  <appSettings>
+    <add key="Environment" value="DEV" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+  </appSettings>
+
+  <system.webServer>
+    <httpErrors errorMode="Custom" xdt:Transform="SetAttributes(errorMode)"></httpErrors>
+  </system.webServer>
+
+  <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform" xmlns="http://www.nlog-project.org/schemas/NLog.xsd">
+    <variable name="environment" value="DEV" xdt:Transform="SetAttributes(value)" xdt:Locator="Match(name)"/>
+    <targets xdt:Transform="Replace">
+      <target name="fallbacklogger" xsi:type="RabbitMQTarget" QueueName="SFA.Logging" ExchangeName="SFA.Logging" ExchangeType="topic" RoutingKey="SFA.Apprenticeships.Api.AvService.{0}" AppId="SFA.Apprenticeships.Api.AvService">
+        <layout xsi:type="JsonLayout">
+          <property name="user" layout="${mdlc:userId}" />
+          <property name="session" layout="${mdlc:sessionId}" />
+          <property name="application" layout="SFA.Apprenticeships.Web.Recruit" />
+          <property name="environment" layout="${environment}" />
+          <property name="version" layout="${gdc:item=version}" />
+          <property name="date" layout="${longdate}" />
+          <property name="level" layout="${level:upperCase=true}" />
+          <property name="logger" layout="${logger}" />
+          <property name="machinename" layout="${machinename}" />
+          <property name="processname" layout="${processname}" />
+          <property name="message" layout="${message}" />
+          <property name="exception" layout="${onexception:${exception:format=tostring}}" />
+          <property name="errordata" layout="${onexception:${exception:format=data}}" />
+          <property name="errorcode" layout="${event-context:item=ErrorCode}" />
+          <property name="stacktrace" layout="${onexception:${stacktrace:tostring}}" />
+          <property name="ticks" layout="${ticks}" />
+          <property name="processid" layout="${processid}" />
+          <property name="useragent" layout="${mdlc:UserAgent}" />
+          <property name="referrer" layout="${mdlc:UrlReferrer}" />
+          <property name="userlanguages" layout="${mdlc:UserLanguages}" />
+          <property name="currentculture" layout="${mdlc:CurrentCulture}" />
+          <property name="currentuiculture" layout="${mdlc:CurrentUICulture}" />
+          <property name="headers" layout="${mdlc:Headers}" />
+        </layout>
+      </target>
+    </targets>
+    <rules xdt:Transform="Replace">
+      <logger name="*" minlevel="Info" writeTo="fallbacklogger" />
+    </rules>
+  </nlog>
 </configuration>
