--- a/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
+++ b/src/SFA.Apprenticeships.Web.Recruit/SFA.Apprenticeships.Web.Recruit.csproj
@@ -563,6 +563,7 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>_comment.generated.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\VacancyPosting\_ContactDetailsAndVacancyHistory.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
